--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,938 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+$main-color: #56ccf2;
+$secondary-color: #253757;
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  font-family: "Muli", sans-serif;
+  font-weight: 400;
+  margin: 0;
+  color: #334563;
+  font-size: 16px;
+}
+
+ul,
+li,
+h1,
+h2,
+p {
+  margin: 0;
+}
+
+input,
+span {
+  display: block;
+}
+
+.container {
+  width: 1141px;
+  margin: 0 auto;
+}
+
+.btn {
+  width: 226px;
+  height: 56px;
+  border-radius: 64px;
+  outline: 0;
+  border: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #fff;
+  cursor: pointer;
+
+  &-main {
+    background-color: #2f80ed;
+    transition: background-color, 0.4s;
+
+    &:hover {
+      background-color: #253757;
+    }
+  }
+
+  &__secondary {
+    background: #fff;
+    color: #253757;
+    transition: background-color, 0.4s;
+
+    &:hover {
+      background-color: #eee;
+    }
+  }
+
+  &:active {
+    transform: translateY(2px);
+  }
+}
+
+.section {
+  &__title {
+    height: 21px;
+    color: $main-color;
+    font-weight: 800;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: url("../images/part_of_title.png") no-repeat;
+    background-size: contain;
+    padding-left: 37px;
+    margin-bottom: 19px;
+  }
+
+  &__text {
+    color: $secondary-color;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 150%;
+  }
+}
+
+.header {
+  background: linear-gradient(120deg,
+  rgba(86, 204, 242, 1) 0%, rgba(86, 204, 242, 1) 78%,
+  rgba(255, 255, 255, 1) 68%, rgba(255, 255, 255, 1) 100%);
+  height: 848px;
+  box-sizing: border-box;
+  padding: 48px 0;
+  position: relative;
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__logo {
+    width: 53px;
+    height: 32px;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 100%;
+
+    &--link {
+      text-decoration: none;
+      color: #fff;
+    }
+  }
+
+  &__main-menu {
+    list-style: none;
+    display: flex;
+  }
+
+  & .main-menu {
+    &__item {
+      margin-right: 63px;
+      height: 30px;
+      line-height: 30px;
+
+      &::after {
+        content: "";
+        display: block;
+        height: 4px;
+        width: 100%;
+        margin-top: 5px;
+        opacity: 0;
+
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #fcc304;
+        border-radius: 32px;
+        transition: opacity, 0.4s;
+      }
+
+      &:hover::after {
+        opacity: 1;
+      }
+
+      &:last-child {
+        margin-left: 135px;
+      }
+
+      & a {
+        text-decoration: none;
+        color: #fff;
+        font-weight: 700;
+        line-height: 150%;
+      }
+    }
+  }
+
+  &__title {
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 150%;
+    color: #fff;
+    margin: 76px 0 22px 98px;
+  }
+
+  &__intro {
+    font-size: 24px;
+    line-height: 150%;
+    color: #fff;
+    max-width: 754px;
+    margin-left: 98px;
+  }
+
+  &__btn {
+    margin: 42px 0 0 98px;
+  }
+
+  &__photo {
+    background: url("../images/intro.jpg") no-repeat 50%;
+    background-size: cover;
+    height: 640px;
+    margin-top: 80px;
+    position: relative;
+
+    &--text {
+      position: absolute;
+      bottom: 86px;
+      left: 98px;
+      max-width: 264px;
+      color: #fff;
+      font-weight: 900;
+      font-size: 19.6px;
+      line-height: 140%;
+
+      & span {
+        text-transform: uppercase;
+        font-weight: 800;
+        font-size: 12.6px;
+        line-height: 150%;
+        color: $main-color;
+      }
+    }
+
+    & .photo {
+      &__socials {
+        position: absolute;
+        top: 120px;
+        right: -64px;
+        transform: rotate(90deg);
+        height: 416px;
+
+        & .socials {
+          &__link {
+            margin-right: 85px;
+            text-decoration: none;
+            color: #253757;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            font-weight: 800;
+            font-size: 12.6px;
+            line-height: 150%;
+            transition: color, 0.3s;
+
+            &:hover {
+              color: $main-color;
+            }
+
+            &:last-child {
+              margin-right: 0;
+            }
+          }
+        }
+      }
+
+      &__slider {
+        position: absolute;
+        top: 291px;
+        left: -81px;
+        display: flex;
+        width: 162px;
+        height: 64px;
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%),
+          #fcc304;
+        border-radius: 50px;
+
+        & .slider-part {
+          font-size: 26px;
+          color: #fff;
+          margin-top: 17px;
+          transition: color, 0.3s;
+
+          &:hover {
+            color: orangered;
+          }
+        }
+
+        &--left {
+          margin-left: 33px;
+
+          &:active {
+            transform: translateX(-2px);
+          }
+        }
+
+        &--right {
+          margin-left: 71px;
+
+          &:active {
+            transform: translateX(2px);
+          }
+        }
+      }
+    }
+  }
+}
+
+.welcome {
+  box-sizing: border-box;
+  padding-bottom: 162px;
+
+  &__text {
+    margin: 485px 0 0 196px;
+    width: 760px;
+  }
+
+  &__title {
+    margin-top: 136px;
+    color: $secondary-color;
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 100%;
+    text-align: center;
+  }
+}
+
+.services {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 136px;
+
+  &__wrapper {
+    width: 264px;
+
+    &--photo {
+      display: block;
+      width: 160px;
+      margin: 0 auto;
+    }
+
+    &--name {
+      font-weight: 900;
+      font-size: 19px;
+      line-height: 140%;
+      color: $secondary-color;
+      margin-top: 64px;
+    }
+
+    &--description {
+      margin-top: 32px;
+    }
+  }
+}
+
+.process {
+  padding-top: 161px;
+  position: relative;
+  background-color: #fcfcfd;
+  border-left: 64px solid #fff;
+  border-right: 64px solid #fff;
+  box-sizing: border-box;
+
+  &__title {
+    font-weight: 900;
+    font-size: 32px;
+    color: $secondary-color;
+    width: 362px;
+    margin-bottom: 64px;
+  }
+
+  &__description {
+    width: 362px;
+    line-height: 150%;
+  }
+
+  &__step {
+    width: 240px;
+    height: 256px;
+    box-sizing: border-box;
+    box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.02);
+    padding: 0 32px;
+    text-align: center;
+    position: absolute;
+    color: $secondary-color;
+    background: #fff;
+    z-index: 2;
+
+    &--ellipse {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      opacity: 0.1;
+      background-color: red;
+      position: absolute;
+      top: 48px;
+      left: 96px;
+    }
+
+    &--number {
+      margin-top: 64px;
+      font-weight: 900;
+      font-size: 40px;
+      line-height: 150%;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+
+    &--description {
+      font-size: 12.6px;
+      line-height: 150%;
+      margin-top: 4px;
+    }
+
+    &--first {
+      right: 584px;
+      top: 336px;
+
+      & .process__step--ellipse {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          linear-gradient(0deg, #56ccf2, #56ccf2),
+          #c4c4c4;
+      }
+
+      & .process__step--number {
+        color: $main-color;
+      }
+    }
+
+    &--secondary {
+      right: 286px;
+      top: 224px;
+
+      & .process__step--ellipse {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #fcc304;
+      }
+
+      & .process__step--number {
+        color: #fcc304;
+      }
+    }
+
+    &--thirdly {
+      right: 584px;
+      top: 720px;
+
+      & .process__step--ellipse {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          linear-gradient(0deg, #03d542, #03d542),
+          #c4c4c4;
+      }
+
+      & .process__step--number {
+        color: #03d542;
+      }
+    }
+
+    &--last {
+      right: 286px;
+      top: 608px;
+
+      & .process__step--ellipse {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #f25656;
+      }
+
+      & .process__step--number {
+        color: #f25656;
+      }
+    }
+  }
+}
+
+.features {
+  background: url("../images/features_bg.png") no-repeat right,
+    #56ccf2;
+  position: relative;
+  margin-top: 291px;
+  padding: 199px 0 160px;
+
+  &__text {
+    & .section__title {
+      color: #fff;
+      background: url("../images/part_of_title_white.png") no-repeat;
+      background-size: contain;
+    }
+  }
+
+  &__title {
+    width: 362px;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 140%;
+    color: #253757;
+    margin-bottom: 69px;
+  }
+
+  &-list__item {
+    width: 359px;
+    height: 96px;
+    padding-left: 96px;
+    box-sizing: border-box;
+    margin-bottom: 64px;
+
+    &--description {
+      font-size: 16px;
+      line-height: 150%;
+      color: #fff;
+    }
+
+    &:first-child {
+      background: url("../images/features1.png") no-repeat center left;
+      background-size: 64px 64px;
+    }
+
+    &:nth-child(2) {
+      background: url("../images/features2.png") no-repeat center left;
+      background-size: 64px 64px;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+      background: url("../images/features3.png") no-repeat center left;
+      background-size: 64px 64px;
+    }
+  }
+}
+
+.testimonials {
+  padding-top: 165px;
+  background: linear-gradient(to bottom,
+  rgba(255, 255, 255, 1) 0%,
+  rgba(255, 255, 255, 1) 79%,
+  rgba(252, 252, 253, 1) 81%,
+  rgba(252, 252, 253, 1) 100%);
+
+  &__intro {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 140%;
+    color: #253757;
+    width: 362px;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin: 86px 0 0 24px;
+  }
+
+  &__person {
+    width: 314px;
+    height: 464px;
+    box-shadow: 16px 16px 32px rgba(0, 0, 0, 0.05);
+    padding: 0 32px;
+    box-sizing: border-box;
+    text-align: center;
+    position: relative;
+
+    &--description {
+      font-size: 14px;
+      line-height: 150%;
+      font-style: italic;
+      color: $secondary-color;
+      margin-top: 240px;
+    }
+
+    &--background {
+      width: 161.9px;
+      height: 64px;
+      border-radius: 500px;
+      transform: rotate(-65deg);
+      position: absolute;
+      z-index: 0;
+      top: 90px;
+      left: 80px;
+    }
+
+    &--photo {
+      position: absolute;
+      z-index: 2;
+      top: 95px;
+      left: 115px;
+    }
+
+    &--divider {
+      width: 64px;
+      height: 2px;
+      border-radius: 500px;
+      margin: 31px auto;
+    }
+
+    & .first {
+      &__background {
+        background: $main-color;
+      }
+
+      &__divider {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #56ccf2;
+      }
+
+      &__position {
+        color: $main-color;
+      }
+    }
+
+    & .second {
+      &__background {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #fcc304;
+      }
+
+      &__divider {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #fcc304;
+      }
+
+      &__position {
+        color: #fcc304;
+      }
+    }
+
+    & .third {
+      &__background {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #f25656;
+      }
+
+      &__divider {
+        background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0.25) 0%,
+        rgba(255, 255, 255, 0) 100%),
+          #f25656;
+      }
+
+      &__position {
+        color: #f25656;
+      }
+    }
+
+    &--name {
+      font-size: 12px;
+      line-height: 150%;
+      font-weight: 700;
+      color: #152032;
+    }
+
+    &--position {
+      font-weight: 800;
+      font-size: 12px;
+      line-height: 150%;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
+  }
+}
+
+.result {
+  background-color: #fcfcfd;
+  padding: 160px 0 257px;
+  text-align: center;
+  position: relative;
+
+  &__title {
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 100%;
+    color: $secondary-color;
+    margin-bottom: 57px;
+  }
+
+  &__text {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 150%;
+    width: 754px;
+    margin: 0 auto;
+  }
+
+  &__btn {
+    margin-top: 70px;
+    background-color: #2f80ed;
+
+    &:hover {
+      background-color: $secondary-color;
+    }
+  }
+
+  &__bg {
+    opacity: 0.5;
+    border-radius: 500px;
+    transform: rotate(-65.1deg);
+    position: absolute;
+
+    &.very-small {
+      width: 45.28px;
+      height: 17.9px;
+      border: 3px solid #fcc304;
+      border-radius: 500px;
+
+      &--first-left {
+        top: 65px;
+        left: 446px;
+      }
+
+      &--second-left {
+        left: 481px;
+        bottom: 202px;
+      }
+
+      &--first-right {
+        bottom: 153px;
+        right: 552px;
+        border-color: #e193fc;
+      }
+
+      &--second-right {
+        width: 53.69px;
+        height: 21.22px;
+        border-color: #df8dfc;
+        right: 111px;
+        top: 70px;
+      }
+    }
+
+    &.big {
+      width: 143.04px;
+      height: 56.54px;
+      border: 3px solid #03d542;
+
+      &--left {
+        top: 320px;
+        left: 270px;
+      }
+
+      &--first-right {
+        top: 118px;
+        right: 215px;
+      }
+
+      &--second-right {
+        border-color: #2f80ed;
+        bottom: 137px;
+        right: 150px;
+      }
+    }
+
+    &.small {
+      width: 67.36px;
+      height: 26.63px;
+      border: 3px solid #2f80ed;
+
+      &--left {
+        left: 82px;
+        bottom: 273px;
+      }
+    }
+
+    &.standard {
+      width: 85.61px;
+      height: 33.84px;
+      border: 3px solid #e193fc;
+
+      &--first-left {
+        bottom: 97px;
+        left: 131px;
+      }
+
+      &--second-left {
+        border-color: #f8b5b5;
+        top: 60px;
+        left: 233px;
+      }
+
+      &--first-right {
+        right: 314px;
+        bottom: 238px;
+      }
+
+      &--second-right {
+        right: 67px;
+        bottom: 346px;
+        border-color: #fcc304;
+      }
+    }
+  }
+}
+
+.contacts {
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__form {
+    & .section__title {
+      margin-bottom: 104px;
+    }
+
+    & .form__input {
+      width: 656px;
+      border: 0;
+      outline: 0;
+      border-bottom: 1px solid #e1e1e1;
+      margin-bottom: 48px;
+      color: #152032;
+      font-size: 16px;
+      font-weight: 700;
+      box-sizing: border-box;
+      padding: 18px 10px;
+
+      &:nth-child(3) {
+        margin-bottom: 105px;
+      }
+
+      &::placeholder {
+        font-size: 14.4px;
+        line-height: 150%;
+        font-weight: 700;
+        color: gray;
+      }
+
+      &:focus {
+        background-color: #eee;
+        border-radius: 20px;
+      }
+    }
+  }
+
+  &__info {
+    & .contacts__text {
+      font-weight: 900;
+      font-size: 32px;
+      line-height: 140%;
+      color: $secondary-color;
+      width: 362px;
+      margin-bottom: 43px;
+    }
+  }
+
+  &--phone {
+
+    &-number {
+      text-decoration: none;
+      color: $main-color;
+      font-weight: 900;
+      font-size: 24px;
+      line-height: 150%;
+      letter-spacing: 2px;
+      transition: color, 0.3s;
+      display: block;
+
+      &:active {
+        transform: translateX(2px);
+      }
+
+      &:hover {
+        color: $secondary-color;
+      }
+    }
+
+    margin-bottom: 41px;
+  }
+
+  &--address {
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 150%;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $main-color;
+  }
+
+  &--phone,
+  &--address {
+    & span {
+      font-weight: 800;
+      font-size: 12.6px;
+      line-height: 150%;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: #334563;
+    }
+
+    &-map {
+      text-decoration: none;
+      color: $main-color;
+      display: block;
+      transition: color, 0.3s;
+
+      &:hover {
+        color: $secondary-color;
+      }
+
+      &:active {
+        transform: translateX(2px);
+      }
+    }
+  }
+}
+
+.footer {
+  padding-bottom: 83px;
+  margin-top: 136px;
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+
+    &--design {
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 150%;
+      color: $secondary-color;
+    }
+
+    &--menu {
+      display: flex;
+      list-style: none;
+
+      &-item {
+        margin-right: 63px;
+
+        &-link {
+          color: $secondary-color;
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 150%;
+          text-decoration: none;
+          transition: color, 0.3s;
+
+          &:hover {
+            color: $main-color;
+          }
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
+  }
 }
