Fixed some problems

--- a/styles/main.css
+++ b/styles/main.css
@@ -81,11 +81,20 @@ span {
 }
 
 .header {
-  background: linear-gradient(120deg, #56ccf2 0%, #56ccf2 78%, white 68%, white 100%);
+  background: linear-gradient(120deg, #56ccf2 0%, #56ccf2 78%, #fcfcfd 68%, #fcfcfd 100%);
   height: 848px;
   box-sizing: border-box;
   padding: 48px 0;
   position: relative;
+}
+.header__background {
+  background-color: #fcfcfd;
+  position: absolute;
+  bottom: -830px;
+  left: 0;
+  right: 0;
+  height: 830px;
+  z-index: -1;
 }
 .header nav {
   display: flex;
@@ -121,7 +130,7 @@ span {
   opacity: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #fcc304;
   border-radius: 32px;
-  transition: opacity, 0.4s;
+  transition: opacity, 0.6s;
 }
 .header .main-menu__item:hover::after {
   opacity: 1;
@@ -274,7 +283,7 @@ span {
 }
 
 .process {
-  padding-top: 161px;
+  padding: 161px 0 291px;
   position: relative;
   background-color: #fcfcfd;
   border-left: 64px solid #fff;
@@ -371,7 +380,6 @@ span {
 .features {
   background: url("../images/features_bg.png") no-repeat right, #56ccf2;
   position: relative;
-  margin-top: 291px;
   padding: 199px 0 160px;
 }
 .features__text .section__title {
@@ -437,6 +445,7 @@ span {
   box-sizing: border-box;
   text-align: center;
   position: relative;
+  z-index: 4;
 }
 .testimonials__person--description {
   font-size: 14px;
@@ -510,9 +519,10 @@ span {
 
 .result {
   background-color: #fcfcfd;
-  padding: 160px 0 257px;
+  padding: 160px 0;
   text-align: center;
   position: relative;
+  z-index: 0;
 }
 .result__title {
   font-weight: 900;
@@ -618,6 +628,10 @@ span {
   border-color: #fcc304;
 }
 
+.contacts {
+  padding-top: 96px;
+  background-color: #fcfcfd;
+}
 .contacts__wrapper {
   display: flex;
   justify-content: space-between;
@@ -627,8 +641,10 @@ span {
 }
 .contacts__form .form__input {
   width: 656px;
+  height: 41px;
   border: 0;
   outline: 0;
+  background-color: #fcfcfd;
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 48px;
   color: #152032;
@@ -695,6 +711,7 @@ span {
 }
 .contacts--phone-map, .contacts--address-map {
   text-decoration: none;
+  margin-bottom: 53px;
   color: #56ccf2;
   display: block;
   transition: color, 0.3s;
@@ -705,10 +722,41 @@ span {
 .contacts--phone-map:active, .contacts--address-map:active {
   transform: translateX(2px);
 }
+.contacts__socials {
+  display: flex;
+  justify-content: space-between;
+  width: 192px;
+}
+.contacts__socials a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-right: 48px;
+  transition: transform, 0.5s;
+}
+.contacts__socials a:last-child {
+  margin-right: 0;
+}
+.contacts__socials a:hover {
+  transform: scale(0.9);
+}
+.contacts--tw {
+  background: url("../images/twitter.png") no-repeat;
+  background-size: contain;
+}
+.contacts--inst {
+  background: url("../images/instagram.png") no-repeat;
+  background-size: contain;
+}
+.contacts--fb {
+  background: url("../images/facebbok.png") no-repeat;
+  background-size: contain;
+}
 
 .footer {
   padding-bottom: 83px;
-  margin-top: 136px;
+  padding-top: 136px;
+  background-color: #fcfcfd;
 }
 .footer__wrapper {
   display: flex;
