--- a/styles/main.scss
+++ b/styles/main.scss
@@ -94,11 +94,22 @@ span {
 .header {
   background: linear-gradient(120deg,
   rgba(86, 204, 242, 1) 0%, rgba(86, 204, 242, 1) 78%,
-  rgba(255, 255, 255, 1) 68%, rgba(255, 255, 255, 1) 100%);
+  rgba(252, 252, 253, 1) 68%, rgba(252, 252, 253, 1) 100%);
   height: 848px;
   box-sizing: border-box;
   padding: 48px 0;
   position: relative;
+
+  &__background {
+    background-color: #fcfcfd;
+    position: absolute;
+    bottom: -830px;
+    left: 0;
+    right: 0;
+    height: 830px;
+    z-index: -1;
+  }
+
 
   nav {
     display: flex;
@@ -143,7 +154,7 @@ span {
         rgba(255, 255, 255, 0) 100%),
           #fcc304;
         border-radius: 32px;
-        transition: opacity, 0.4s;
+        transition: opacity, 0.6s;
       }
 
       &:hover::after {
@@ -286,6 +297,7 @@ span {
 .welcome {
   box-sizing: border-box;
   padding-bottom: 162px;
+  // background-color: #fcfcfd;
 
   &__text {
     margin: 485px 0 0 196px;
@@ -331,7 +343,7 @@ span {
 }
 
 .process {
-  padding-top: 161px;
+  padding: 161px 0 291px;
   position: relative;
   background-color: #fcfcfd;
   border-left: 64px solid #fff;
@@ -461,7 +473,6 @@ span {
   background: url("../images/features_bg.png") no-repeat right,
     #56ccf2;
   position: relative;
-  margin-top: 291px;
   padding: 199px 0 160px;
 
   &__text {
@@ -542,6 +553,7 @@ span {
     box-sizing: border-box;
     text-align: center;
     position: relative;
+    z-index:4;
 
     &--description {
       font-size: 14px;
@@ -652,9 +664,10 @@ span {
 
 .result {
   background-color: #fcfcfd;
-  padding: 160px 0 257px;
+  padding: 160px 0;
   text-align: center;
   position: relative;
+  z-index: 0;
 
   &__title {
     font-weight: 900;
@@ -782,6 +795,9 @@ span {
 }
 
 .contacts {
+  padding-top: 96px;
+  background-color: #fcfcfd;
+
   &__wrapper {
     display: flex;
     justify-content: space-between;
@@ -794,8 +810,10 @@ span {
 
     & .form__input {
       width: 656px;
+      height: 41px;
       border: 0;
       outline: 0;
+      background-color: #fcfcfd;
       border-bottom: 1px solid #e1e1e1;
       margin-bottom: 48px;
       color: #152032;
@@ -879,6 +897,7 @@ span {
 
     &-map {
       text-decoration: none;
+      margin-bottom: 53px;
       color: $main-color;
       display: block;
       transition: color, 0.3s;
@@ -892,11 +911,49 @@ span {
       }
     }
   }
+
+  &__socials {
+    display: flex;
+    justify-content: space-between;
+    width: 192px;
+
+    & a {
+      display: block;
+      width: 32px;
+      height: 32px;
+      margin-right: 48px;
+      transition: transform, 0.5s;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &:hover {
+        transform: scale(0.9);
+      }
+    }
+  }
+
+  &--tw {
+    background: url('../images/twitter.png') no-repeat;
+    background-size: contain;
+  }
+
+  &--inst {
+    background: url('../images/instagram.png') no-repeat;
+    background-size: contain;
+  }
+
+  &--fb {
+    background: url('../images/facebbok.png') no-repeat;
+    background-size: contain;
+  }
 }
 
 .footer {
   padding-bottom: 83px;
-  margin-top: 136px;
+  padding-top: 136px;
+  background-color: #fcfcfd;
 
   &__wrapper {
     display: flex;
