--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,9 @@ span {
   padding: 48px 0;
   position: relative;
 }
+.header .hamburger-menu #menu__toggle {
+  opacity: 0;
+}
 .header__background {
   background-color: #fcfcfd;
   position: absolute;
@@ -115,6 +118,7 @@ span {
 .header__main-menu {
   list-style: none;
   display: flex;
+  justify-content: space-between;
 }
 .header .main-menu__item {
   margin-right: 63px;
@@ -136,7 +140,8 @@ span {
   opacity: 1;
 }
 .header .main-menu__item:last-child {
-  margin-left: 135px;
+  margin-left: 130px;
+  margin-right: 0;
 }
 .header .main-menu__item a {
   text-decoration: none;
@@ -155,7 +160,7 @@ span {
   font-size: 24px;
   line-height: 150%;
   color: #fff;
-  max-width: 754px;
+  width: 65%;
   margin-left: 98px;
 }
 .header__btn {
@@ -165,14 +170,15 @@ span {
   background: url("../images/intro.jpg") no-repeat 50%;
   background-size: cover;
   height: 640px;
+  width: 100%;
   margin-top: 80px;
   position: relative;
 }
 .header__photo--text {
   position: absolute;
-  bottom: 86px;
-  left: 98px;
-  max-width: 264px;
+  bottom: 10%;
+  left: 10%;
+  width: 25%;
   color: #fff;
   font-weight: 900;
   font-size: 19.6px;
@@ -187,7 +193,7 @@ span {
 }
 .header__photo .photo__socials {
   position: absolute;
-  top: 120px;
+  top: 11%;
   right: -64px;
   transform: rotate(90deg);
   height: 416px;
@@ -222,20 +228,29 @@ span {
 .header__photo .photo__slider .slider-part {
   font-size: 26px;
   color: #fff;
-  margin-top: 17px;
-  transition: color, 0.3s;
 }
-.header__photo .photo__slider .slider-part:hover {
-  color: orangered;
+.header__photo .photo__slider--left, .header__photo .photo__slider--right {
+  width: 81px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background, 0.4s;
+}
+.header__photo .photo__slider--left:hover, .header__photo .photo__slider--right:hover {
+  background: linear-gradient(180deg, #fec75d 0%, #fbb80b 90.48%), #fdcc29;
+  cursor: pointer;
 }
 .header__photo .photo__slider--left {
-  margin-left: 33px;
+  border-radius: 50px 0 0 50px;
+  transition: transform, 0.4s;
 }
 .header__photo .photo__slider--left:active {
   transform: translateX(-2px);
 }
 .header__photo .photo__slider--right {
-  margin-left: 71px;
+  border-radius: 0 50px 50px 0;
+  transition: transform, 0.4s;
 }
 .header__photo .photo__slider--right:active {
   transform: translateX(2px);
@@ -280,101 +295,6 @@ span {
 }
 .services__wrapper--description {
   margin-top: 32px;
-}
-
-.process {
-  padding: 161px 0 291px;
-  position: relative;
-  background-color: #fcfcfd;
-  border-left: 64px solid #fff;
-  border-right: 64px solid #fff;
-  box-sizing: border-box;
-}
-.process__title {
-  font-weight: 900;
-  font-size: 32px;
-  color: #253757;
-  width: 362px;
-  margin-bottom: 64px;
-}
-.process__description {
-  width: 362px;
-  line-height: 150%;
-}
-.process__step {
-  width: 240px;
-  height: 256px;
-  box-sizing: border-box;
-  box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.02);
-  padding: 0 32px;
-  text-align: center;
-  position: absolute;
-  color: #253757;
-  background: #fff;
-  z-index: 2;
-}
-.process__step--ellipse {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  opacity: 0.1;
-  background-color: red;
-  position: absolute;
-  top: 48px;
-  left: 96px;
-}
-.process__step--number {
-  margin-top: 64px;
-  font-weight: 900;
-  font-size: 40px;
-  line-height: 150%;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-.process__step--description {
-  font-size: 12.6px;
-  line-height: 150%;
-  margin-top: 4px;
-}
-.process__step--first {
-  right: 584px;
-  top: 336px;
-}
-.process__step--first .process__step--ellipse {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #56ccf2, #56ccf2), #c4c4c4;
-}
-.process__step--first .process__step--number {
-  color: #56ccf2;
-}
-.process__step--secondary {
-  right: 286px;
-  top: 224px;
-}
-.process__step--secondary .process__step--ellipse {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #fcc304;
-}
-.process__step--secondary .process__step--number {
-  color: #fcc304;
-}
-.process__step--thirdly {
-  right: 584px;
-  top: 720px;
-}
-.process__step--thirdly .process__step--ellipse {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #03d542, #03d542), #c4c4c4;
-}
-.process__step--thirdly .process__step--number {
-  color: #03d542;
-}
-.process__step--last {
-  right: 286px;
-  top: 608px;
-}
-.process__step--last .process__step--ellipse {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #f25656;
-}
-.process__step--last .process__step--number {
-  color: #f25656;
 }
 
 .features {
@@ -515,117 +435,6 @@ span {
   line-height: 150%;
   letter-spacing: 2px;
   text-transform: uppercase;
-}
-
-.result {
-  background-color: #fcfcfd;
-  padding: 160px 0;
-  text-align: center;
-  position: relative;
-  z-index: 0;
-}
-.result__title {
-  font-weight: 900;
-  font-size: 48px;
-  line-height: 100%;
-  color: #253757;
-  margin-bottom: 57px;
-}
-.result__text {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 150%;
-  width: 754px;
-  margin: 0 auto;
-}
-.result__btn {
-  margin-top: 70px;
-  background-color: #2f80ed;
-}
-.result__btn:hover {
-  background-color: #253757;
-}
-.result__bg {
-  opacity: 0.5;
-  border-radius: 500px;
-  transform: rotate(-65.1deg);
-  position: absolute;
-}
-.result__bg.very-small {
-  width: 45.28px;
-  height: 17.9px;
-  border: 3px solid #fcc304;
-  border-radius: 500px;
-}
-.result__bg.very-small--first-left {
-  top: 65px;
-  left: 446px;
-}
-.result__bg.very-small--second-left {
-  left: 481px;
-  bottom: 202px;
-}
-.result__bg.very-small--first-right {
-  bottom: 153px;
-  right: 552px;
-  border-color: #e193fc;
-}
-.result__bg.very-small--second-right {
-  width: 53.69px;
-  height: 21.22px;
-  border-color: #df8dfc;
-  right: 111px;
-  top: 70px;
-}
-.result__bg.big {
-  width: 143.04px;
-  height: 56.54px;
-  border: 3px solid #03d542;
-}
-.result__bg.big--left {
-  top: 320px;
-  left: 270px;
-}
-.result__bg.big--first-right {
-  top: 118px;
-  right: 215px;
-}
-.result__bg.big--second-right {
-  border-color: #2f80ed;
-  bottom: 137px;
-  right: 150px;
-}
-.result__bg.small {
-  width: 67.36px;
-  height: 26.63px;
-  border: 3px solid #2f80ed;
-}
-.result__bg.small--left {
-  left: 82px;
-  bottom: 273px;
-}
-.result__bg.standard {
-  width: 85.61px;
-  height: 33.84px;
-  border: 3px solid #e193fc;
-}
-.result__bg.standard--first-left {
-  bottom: 97px;
-  left: 131px;
-}
-.result__bg.standard--second-left {
-  border-color: #f8b5b5;
-  top: 60px;
-  left: 233px;
-}
-.result__bg.standard--first-right {
-  right: 314px;
-  bottom: 238px;
-}
-.result__bg.standard--second-right {
-  right: 67px;
-  bottom: 346px;
-  border-color: #fcc304;
 }
 
 .contacts {
@@ -788,6 +597,643 @@ span {
 }
 .footer__wrapper--menu-item:last-child {
   margin-right: 0;
+}
+
+.result {
+  background-color: #fcfcfd;
+  padding: 160px 0;
+  text-align: center;
+  position: relative;
+  z-index: 0;
+}
+.result__title {
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 100%;
+  color: #253757;
+  margin-bottom: 57px;
+}
+.result__text {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 150%;
+  width: 754px;
+  margin: 0 auto;
+}
+.result__btn {
+  margin-top: 70px;
+  background-color: #2f80ed;
+}
+.result__btn:hover {
+  background-color: #253757;
+}
+.result__bg {
+  opacity: 0.5;
+  border-radius: 500px;
+  transform: rotate(-65.1deg);
+  position: absolute;
+}
+.result__bg.very-small {
+  width: 45.28px;
+  height: 17.9px;
+  border: 3px solid #fcc304;
+  border-radius: 500px;
+}
+.result__bg.very-small--first-left {
+  top: 65px;
+  left: 446px;
+}
+.result__bg.very-small--second-left {
+  left: 481px;
+  bottom: 202px;
+}
+.result__bg.very-small--first-right {
+  bottom: 153px;
+  right: 552px;
+  border-color: #e193fc;
+}
+.result__bg.very-small--second-right {
+  width: 53.69px;
+  height: 21.22px;
+  border-color: #df8dfc;
+  right: 111px;
+  top: 70px;
+}
+.result__bg.big {
+  width: 143.04px;
+  height: 56.54px;
+  border: 3px solid #03d542;
+}
+.result__bg.big--left {
+  top: 320px;
+  left: 270px;
+}
+.result__bg.big--first-right {
+  top: 118px;
+  right: 215px;
+}
+.result__bg.big--second-right {
+  border-color: #2f80ed;
+  bottom: 137px;
+  right: 150px;
+}
+.result__bg.small {
+  width: 67.36px;
+  height: 26.63px;
+  border: 3px solid #2f80ed;
+}
+.result__bg.small--left {
+  left: 82px;
+  bottom: 273px;
+}
+.result__bg.standard {
+  width: 85.61px;
+  height: 33.84px;
+  border: 3px solid #e193fc;
+}
+.result__bg.standard--first-left {
+  bottom: 97px;
+  left: 131px;
+}
+.result__bg.standard--second-left {
+  border-color: #f8b5b5;
+  top: 60px;
+  left: 233px;
+}
+.result__bg.standard--first-right {
+  right: 314px;
+  bottom: 238px;
+}
+.result__bg.standard--second-right {
+  right: 67px;
+  bottom: 346px;
+  border-color: #fcc304;
+}
+
+.process {
+  padding: 161px 0 291px;
+  position: relative;
+  background-color: #fcfcfd;
+  border-left: 64px solid #fff;
+  border-right: 64px solid #fff;
+  box-sizing: border-box;
+}
+.process__title {
+  font-weight: 900;
+  font-size: 32px;
+  color: #253757;
+  width: 362px;
+  margin-bottom: 64px;
+}
+.process__description {
+  width: 362px;
+  line-height: 150%;
+}
+.process .container {
+  display: flex;
+  justify-content: space-between;
+}
+.process__steps {
+  position: relative;
+  width: 570px;
+}
+.process__step {
+  width: 240px;
+  height: 256px;
+  box-sizing: border-box;
+  box-shadow: 16px 16px 16px rgba(0, 0, 0, 0.02);
+  padding: 0 32px;
+  text-align: center;
+  position: absolute;
+  color: #253757;
+  background: #fff;
+  z-index: 2;
+}
+.process__step--ellipse {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  opacity: 0.1;
+  background-color: red;
+  position: absolute;
+  top: 48px;
+  left: 96px;
+}
+.process__step--number {
+  margin-top: 64px;
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 150%;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.process__step--description {
+  font-size: 12.6px;
+  line-height: 150%;
+  margin-top: 4px;
+}
+.process__step--first {
+  left: 0;
+  top: 128px;
+}
+.process__step--first .process__step--ellipse {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #56ccf2, #56ccf2), #c4c4c4;
+}
+.process__step--first .process__step--number {
+  color: #56ccf2;
+}
+.process__step--secondary {
+  right: 0;
+  top: 0;
+}
+.process__step--secondary .process__step--ellipse {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #fcc304;
+}
+.process__step--secondary .process__step--number {
+  color: #fcc304;
+}
+.process__step--thirdly {
+  left: 0;
+  top: 512px;
+}
+.process__step--thirdly .process__step--ellipse {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(0deg, #03d542, #03d542), #c4c4c4;
+}
+.process__step--thirdly .process__step--number {
+  color: #03d542;
+}
+.process__step--last {
+  right: 0;
+  top: 395px;
+}
+.process__step--last .process__step--ellipse {
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%), #f25656;
+}
+.process__step--last .process__step--number {
+  color: #f25656;
+}
+
+@media (max-width: 1400px) {
+  .container {
+    width: 1000px;
+  }
+
+  .header__background {
+    bottom: -700px;
+  }
+  .header__intro {
+    width: 75%;
+  }
+  .header__photo {
+    height: 540px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .header__photo--text {
+    width: 27%;
+    font-size: 18px;
+  }
+
+  .welcome__text {
+    margin: 350px auto 0;
+  }
+}
+@media (max-width: 1380px) {
+  .process {
+    padding-bottom: 100px;
+    padding-top: 100px;
+  }
+  .process__steps {
+    width: 500px;
+    height: 550px;
+  }
+  .process__steps .process__step--first {
+    top: 0;
+    left: 0;
+  }
+  .process__steps .process__step--secondary {
+    right: 0;
+    top: 0;
+  }
+  .process__steps .process__step--thirdly {
+    top: 264px;
+    left: 0;
+  }
+  .process__steps .process__step--last {
+    top: 264px;
+    right: 0;
+  }
+}
+@media (max-width: 1255px) {
+  .container {
+    width: 900px;
+  }
+
+  .btn {
+    font-size: 15px;
+  }
+
+  .header {
+    height: 825px;
+  }
+  .header__background {
+    bottom: -625px;
+  }
+  .header__title {
+    font-size: 55px;
+  }
+  .header__main-menu .main-menu__item {
+    margin-right: 45px;
+  }
+  .header__intro {
+    font-size: 20px;
+    width: 70%;
+  }
+  .header__photo--text {
+    font-size: 17px;
+  }
+
+  .section__text {
+    font-size: 20px;
+  }
+
+  .welcome {
+    padding-bottom: 100px;
+  }
+  .welcome__title {
+    font-size: 43px;
+    margin-top: 90px;
+  }
+
+  .services {
+    margin-top: 90px;
+  }
+
+  .process {
+    padding-top: 80px;
+  }
+  .process__text {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+  }
+  .process__title {
+    margin-bottom: 40px;
+  }
+  .process .container {
+    display: block;
+  }
+  .process__steps {
+    margin-top: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+  }
+  .process__steps .process__step {
+    width: 200px;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  .process__steps .process__step--description {
+    margin-bottom: 10px;
+  }
+  .process__steps .process__step--ellipse {
+    top: 20%;
+    left: 37%;
+  }
+}
+@media (max-width: 1210px) {
+  .process__text {
+    width: 100%;
+  }
+  .process__title {
+    font-size: 28px;
+  }
+  .process__description {
+    width: 100%;
+    text-align: justify;
+  }
+  .process__steps .process__step {
+    width: 150px;
+    padding: 0 20px;
+  }
+  .process__steps .process__step--number {
+    margin-top: 54px;
+  }
+  .process__steps .process__step--ellipse {
+    top: 15%;
+    left: 35%;
+  }
+}
+@media (max-width: 1100px) {
+  .container {
+    width: 700px;
+  }
+
+  .header {
+    height: 704px;
+    background: #56ccf2;
+  }
+  .header__background {
+    bottom: -545px;
+  }
+  .header__title {
+    font-size: 45px;
+  }
+  .header__intro {
+    font-size: 17px;
+    width: 75%;
+  }
+  .header__btn {
+    width: 180px;
+    height: 50px;
+    font-size: 14px;
+  }
+  .header__logo {
+    font-size: 28px;
+  }
+  .header__main-menu .main-menu__item {
+    margin-right: 40px;
+  }
+  .header__main-menu .main-menu__item:last-child {
+    margin-left: 20px;
+  }
+  .header__photo {
+    height: 400px;
+  }
+  .header__photo .photo__slider {
+    top: 206px;
+    width: 145px;
+    height: 52px;
+    left: -73px;
+  }
+  .header__photo .photo__slider--left, .header__photo .photo__slider--right {
+    height: 52px;
+    width: 73px;
+  }
+  .header__photo--text {
+    font-size: 15px;
+  }
+  .header__photo .photo__socials {
+    transform: none;
+    top: 410px;
+    left: 135px;
+  }
+
+  .welcome__title {
+    margin-top: 80px;
+  }
+  .welcome__text {
+    margin-top: 280px;
+  }
+
+  .services {
+    margin-top: 80px;
+  }
+  .services__wrapper {
+    padding: 0 5px;
+    text-align: center;
+    width: 200px;
+  }
+  .services__wrapper--name {
+    margin-top: 40px;
+    font-size: 17px;
+  }
+  .services__wrapper--description {
+    font-size: 15px;
+  }
+}
+@media (max-width: 990px) {
+  .section__title {
+    width: 100%;
+  }
+  .section__text {
+    margin: 0 auto;
+  }
+}
+@media (max-width: 900px) {
+  .container {
+    width: 600px;
+  }
+
+  .header {
+    height: 595px;
+  }
+  .header__background {
+    bottom: -485px;
+  }
+  .header__title {
+    text-align: center;
+    margin: 50px 0 22px;
+  }
+  .header__intro {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .header__logo--link {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  .header__btn {
+    width: 130px;
+    display: block;
+    margin: 42px auto 0;
+    font-size: 13px;
+    height: 40px;
+  }
+  .header__main-menu .main-menu__item {
+    margin-right: 25px;
+  }
+  .header__photo {
+    height: 350px;
+    margin-top: 42px;
+  }
+  .header__photo--text {
+    font-size: 13px;
+    bottom: 7%;
+    left: 5%;
+  }
+  .header__photo .socials {
+    display: none;
+  }
+  .header__photo .photo__slider {
+    top: 325px;
+    width: 120px;
+    height: 46px;
+    left: 235px;
+  }
+  .header__photo .photo__slider--left, .header__photo .photo__slider--right {
+    height: 46px;
+    width: 60px;
+  }
+
+  .welcome__text {
+    width: 600px;
+    margin: 250px auto 0;
+  }
+  .welcome__title {
+    margin-top: 60px;
+  }
+
+  .services {
+    margin-top: 60px;
+  }
+
+  .section__text {
+    font-size: 18px;
+    text-align: center;
+  }
+  .section__title {
+    text-align: center;
+    background-position: 40%;
+  }
+}
+@media (max-width: 650px) {
+  .container {
+    width: 500px;
+  }
+
+  .header__photo .photo__slider {
+    left: 205px;
+  }
+
+  .section__text {
+    font-size: 16px;
+  }
+  .section__title {
+    padding: 0;
+    background-position: 35%;
+  }
+
+  .welcome__text {
+    margin-top: 220px;
+    width: 100%;
+  }
+  .welcome__title {
+    font-size: 38px;
+    margin-top: 40px;
+  }
+
+  .services {
+    margin-top: 40px;
+  }
+  .services__wrapper {
+    width: 150px;
+  }
+  .services__wrapper--name {
+    font-size: 15px;
+    margin-top: 20px;
+  }
+  .services__wrapper--description {
+    font-size: 13px;
+    margin-top: 20px;
+  }
+  .services__wrapper--photo {
+    width: 100px;
+    height: 100px;
+  }
+}
+@media (max-width: 550px) {
+  .container {
+    width: 300px;
+  }
+
+  .header__background {
+    bottom: -420px;
+  }
+  .header__photo {
+    width: 190%;
+    margin-left: -115px;
+  }
+  .header__photo--text {
+    left: 10%;
+  }
+  .header__logo--link {
+    font-size: 20px;
+  }
+  .header__title {
+    font-size: 28px;
+  }
+  .header__intro {
+    font-size: 13px;
+  }
+
+  .services {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .services__wrapper {
+    width: 250px;
+    margin-top: 40px;
+  }
+  .services__wrapper:first-child {
+    margin-top: 0;
+  }
+  .services__wrapper--photo {
+    width: 150px;
+    height: 150px;
+  }
+  .services__wrapper--name {
+    font-size: 17px;
+  }
+  .services__wrapper--description {
+    font-size: 15px;
+  }
+
+  .section__title {
+    background-position: 25%;
+  }
+  .section__text {
+    text-align: justify;
+  }
+
+  .welcome__title {
+    font-size: 35px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
