--- a/styles/_contacts.scss
+++ b/styles/_contacts.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 .contacts {
   padding-top: 96px;
@@ -10,12 +10,14 @@
   }
 
   &__form {
+    width: 100%;
+
     & .section__title {
       margin-bottom: 104px;
     }
 
     & .form__input {
-      width: 656px;
+      width: 90%;
       height: 41px;
       border: 0;
       outline: 0;
@@ -58,7 +60,6 @@
   }
 
   &--phone {
-
     &-number {
       text-decoration: none;
       color: $main-color;
