--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 .footer {
   padding-bottom: 83px;
@@ -14,11 +14,13 @@
       font-size: 16px;
       line-height: 150%;
       color: $secondary-color;
+      width: 20%;
     }
 
     &--menu {
       display: flex;
       list-style: none;
+      width: 70%;
 
       &-item {
         margin-right: 63px;
