--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,14 +1,17 @@
-@import "variables";
-@import "myReset&Common";
-@import "header";
-@import "welcome";
-@import "services";
-@import "features";
-@import "testimonials";
-@import "contacts";
-@import "footer";
-@import "results";
-@import "process";
+@import 'variables';
+@import 'myReset&Common';
+@import 'header';
+@import 'welcome';
+@import 'services';
+@import 'features';
+@import 'testimonials';
+@import 'contacts';
+@import 'footer';
+@import 'results';
+@import 'process';
+@import 'media';
+
+@import 'variables';
 
 @media (max-width: 1400px) {
   .container {
@@ -140,9 +143,11 @@
     padding-top: 80px;
 
     &__text {
-      margin-left: auto;
-      margin-right: auto;
-      width: 30%;
+      width: 100%;
+    }
+
+    &__description {
+      width: 100%;
     }
 
     &__title {
@@ -173,6 +178,33 @@
         &--ellipse {
           top: 20%;
           left: 37%;
+        }
+      }
+    }
+  }
+
+  .features {
+    padding: 100px 0 100px;
+    background-size: 900px 1000px;
+
+    &__title {
+      font-size: 27px;
+    }
+
+    &-list {
+      &__item {
+        padding-left: 60px;
+
+        &:last-child {
+          background-size: 44px 44px;
+        }
+
+        &:first-child {
+          background-size: 44px 44px;
+        }
+
+        &:nth-child(2) {
+          background-size: 44px 44px;
         }
       }
     }
@@ -312,6 +344,100 @@
       }
     }
   }
+
+  .features {
+    background-size: 600px 850px;
+    padding: 70px 0;
+  }
+
+  .testimonials {
+    padding-top: 100px;
+
+    &__wrapper {
+      margin: 60px 0 0;
+    }
+
+    &__person {
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &--photo {
+        left: 80px;
+      }
+
+      &--background {
+        left: 32px;
+      }
+    }
+  }
+
+  .result {
+    padding: 70px 0;
+
+    &__title {
+      font-size: 40px;
+    }
+
+    &__text {
+      font-size: 20px;
+    }
+
+    &__btn {
+      width: 180px;
+      height: 45px;
+    }
+
+    &__bg {
+      &.very-small--first-left,
+      &.very-small--second-left,
+      &.very-small--first-right,
+      &.very-small--second-right,
+      &.big--first-right {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    &__form {
+      & .form__input:nth-child(3) {
+        margin-bottom: 60px;
+      }
+    }
+    &__info {
+      & .contacts__text {
+        font-size: 28px;
+        margin-bottom: 33px;
+      }
+
+      & .contacts--address,
+      & .contacts--phone {
+        & a {
+          font-size: 18px;
+          margin-bottom: 31px;
+        }
+      }
+    }
+  }
+
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 30px;
+
+    &__wrapper {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &--design {
+        margin-bottom: 30px;
+        text-align: center;
+      }
+    }
+  }
 }
 
 @media (max-width: 990px) {
@@ -322,6 +448,25 @@
 
     &__text {
       margin: 0 auto;
+    }
+  }
+
+  .features {
+    background: $main-color;
+
+    &__title {
+      width: 100%;
+    }
+
+    &-list {
+      &__item {
+        width: 100%;
+        margin-bottom: 30px;
+
+        &--description {
+          padding: 24px 0;
+        }
+      }
     }
   }
 }
@@ -424,7 +569,135 @@
 
     &__title {
       text-align: center;
-      background-position: 40%;
+      background-position: 35%;
+      padding: 0;
+    }
+  }
+
+  .process {
+    &__title {
+      width: 100%;
+      margin: 0 auto 35px;
+      text-align: center;
+    }
+
+    &__steps {
+      & .process__step {
+        width: 120px;
+        padding: 0 15px;
+
+        &--description {
+          font-size: 11px;
+        }
+      }
+    }
+  }
+
+  .features {
+    &__title {
+      margin-bottom: 49px;
+    }
+
+    &__text {
+      & .section__title {
+        background-position: 35%;
+      }
+    }
+  }
+
+  .testimonials {
+    & .section__title {
+      background-position: 30%;
+    }
+
+    &__intro {
+      width: 100%;
+      text-align: center;
+    }
+
+    &__person {
+      height: 400px;
+
+      &--description {
+        margin-top: 180px;
+        font-size: 12px;
+      }
+
+      &--background {
+        width: 110.9px;
+        height: 50px;
+        top: 65px;
+      }
+
+      &--photo {
+        top: 75px;
+        left: 62px;
+
+        & img {
+          width: 70px;
+        }
+      }
+    }
+  }
+
+  .result {
+    &__title {
+      font-size: 35px;
+      margin-bottom: 40px;
+    }
+
+    &__text {
+      font-size: 17px;
+      width: 100%;
+    }
+
+    &__btn {
+      margin-top: 50px;
+    }
+
+    &__bg {
+      &.standard--second-right {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    &__wrapper {
+      display: block;
+    }
+
+    &__form {
+      margin-bottom: 40px;
+
+      & .section__title {
+        background-position: 25%;
+        margin-bottom: 60px;
+      }
+
+      & .form__input {
+        margin: 0 auto 30px;
+      }
+
+      & .form-btn {
+        margin: 0 auto;
+        width: 180px;
+        height: 45px;
+        display: block;
+      }
+    }
+
+    &__info {
+      text-align: center;
+    }
+
+    &__text {
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    &__socials {
+      margin: 0 auto;
     }
   }
 }
@@ -439,6 +712,26 @@
       & .photo__slider {
         left: 205px;
       }
+    }
+
+    & nav {
+      flex-direction: column;
+    }
+
+    &__main-menu {
+      padding-left: 0;
+
+      & .main-menu {
+        &__item {
+          & a {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+
+    &__title {
+      margin-top: 22px;
     }
   }
 
@@ -487,6 +780,114 @@
       }
     }
   }
+
+  .features {
+    &__title {
+      text-align: center;
+      margin-bottom: 29px;
+    }
+
+    &__text {
+      & .section__title {
+        background-position: 25%;
+      }
+    }
+
+    &-list {
+      &__item {
+        &--description {
+          padding: 15px 0;
+          font-size: 13px;
+        }
+      }
+    }
+  }
+
+  .testimonials {
+    &__wrapper {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__person {
+      width: 100%;
+      height: 100%;
+      padding-bottom: 10px;
+      margin-bottom: 40px;
+
+      &--background {
+        left: 40%;
+      }
+
+      &--photo {
+        left: 45%;
+      }
+    }
+  }
+
+  .contacts {
+    &__info {
+      & .section__title {
+        background-position: 30%;
+      }
+    }
+  }
+
+  .footer {
+    &__wrapper {
+      &--menu {
+        &-item {
+          margin-right: 23px;
+
+          & a {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .process {
+    padding-top: 60px;
+
+    &__steps {
+      display: block;
+
+      & .process__step {
+        width: 100%;
+        height: 50%;
+
+        &--description {
+          font-size: 14px;
+        }
+
+        &--ellipse {
+          top: 5%;
+          left: 44%;
+        }
+      }
+    }
+
+    & .container {
+      width: 100%;
+    }
+
+    &__title {
+      font-size: 25px;
+    }
+
+    &__description {
+      width: 100%;
+      font-size: 14px;
+    }
+  }
+
+  .welcome {
+    padding-bottom: 60px;
+  }
 }
 
 @media (max-width: 550px) {
@@ -509,8 +910,12 @@
     }
 
     &__logo {
+      width: 100%;
+
       &--link {
+        display: block;
         font-size: 20px;
+        margin: 0 auto;
       }
     }
 
@@ -520,6 +925,29 @@
 
     &__intro {
       font-size: 13px;
+    }
+
+    &__main-menu {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+
+      & .main-menu {
+        &__item {
+          margin-right: 10px;
+          width: 100%;
+          margin-bottom: 10px;
+
+          &:last-child {
+            margin-left: 0;
+          }
+
+          & a {
+            font-size: 12px;
+          }
+        }
+      }
     }
   }
 
@@ -564,6 +992,88 @@
   .welcome {
     &__title {
       font-size: 35px;
+      margin-top: 60px;
+    }
+
+    &__text {
+      margin-top: 400px;
+    }
+  }
+
+  .process {
+    &__title {
+      font-size: 20px;
+    }
+  }
+
+  .testimonials {
+    & .section__title {
+      background-position: 15%;
+    }
+
+    &__person {
+      &--background {
+        left: 32%;
+      }
+
+      &--photo {
+        left: 42%;
+      }
+    }
+  }
+
+  .result {
+    &__bg {
+      &.big--left {
+        left: 30px;
+      }
+
+      &.standard--second-left {
+        top: 5px;
+      }
+
+      &.big--second-right,
+      &.standard--first-right {
+        left: 350px;
+      }
+
+      &.standard--first-left {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    & .section__title {
+      background-position: 5%;
+    }
+
+    &__info {
+      & .contacts__text {
+        font-size: 24px;
+        width: 100%;
+      }
+    }
+  }
+
+  .footer {
+    &__wrapper {
+      &--menu {
+        padding-left: 0;
+
+        &-item {
+          margin-right: 7px;
+
+          & a {
+            font-size: 12px;
+          }
+        }
+      }
+
+      &--design {
+        font-size: 15px;
+        width: 100%;
+      }
     }
   }
 }
