--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,1 +1,1023 @@
-@import "variables";
+@import 'variables';
+
+@media (max-width: 1400px) {
+  .container {
+    width: 1000px;
+  }
+
+  .header {
+    &__background {
+      bottom: -700px;
+    }
+
+    &__intro {
+      width: 75%;
+    }
+
+    &__photo {
+      height: 540px;
+      margin-left: auto;
+      margin-right: auto;
+
+      &--text {
+        width: 27%;
+        font-size: 18px;
+      }
+    }
+  }
+
+  .welcome {
+    &__text {
+      margin: 350px auto 0;
+    }
+  }
+}
+
+@media (max-width: 1380px) {
+  .process {
+    padding-bottom: 100px;
+    padding-top: 100px;
+
+    &__steps {
+      width: 500px;
+      height: 550px;
+
+      & .process__step {
+        &--first {
+          top: 0;
+          left: 0;
+        }
+
+        &--secondary {
+          right: 0;
+          top: 0;
+        }
+
+        &--thirdly {
+          top: 264px;
+          left: 0;
+        }
+
+        &--last {
+          top: 264px;
+          right: 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1255px) {
+  .container {
+    width: 900px;
+  }
+
+  .btn {
+    font-size: 15px;
+  }
+
+  .header {
+    height: 825px;
+
+    &__background {
+      bottom: -625px;
+    }
+
+    &__title {
+      font-size: 55px;
+    }
+
+    &__main-menu {
+      & .main-menu {
+        &__item {
+          margin-right: 45px;
+        }
+      }
+    }
+
+    &__intro {
+      font-size: 20px;
+      width: 70%;
+    }
+
+    &__photo {
+      &--text {
+        font-size: 17px;
+      }
+    }
+  }
+
+  .section {
+    &__text {
+      font-size: 20px;
+    }
+  }
+
+  .welcome {
+    padding-bottom: 100px;
+
+    &__title {
+      font-size: 43px;
+      margin-top: 90px;
+    }
+  }
+
+  .services {
+    margin-top: 90px;
+  }
+
+  .process {
+    padding-top: 80px;
+
+    &__text {
+      width: 100%;
+    }
+
+    &__description {
+      width: 100%;
+    }
+
+    &__title {
+      margin-bottom: 40px;
+    }
+
+    .container {
+      display: block;
+    }
+
+    &__steps {
+      margin-top: 40px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      height: 100%;
+
+      .process__step {
+        width: 200px;
+        position: relative;
+        top: 0;
+        left: 0;
+
+        &--description {
+          margin-bottom: 10px;
+        }
+
+        &--ellipse {
+          top: 20%;
+          left: 37%;
+        }
+      }
+    }
+  }
+
+  .features {
+    padding: 100px 0 100px;
+    background-size: 900px 1000px;
+
+    &__title {
+      font-size: 27px;
+    }
+
+    &-list {
+      &__item {
+        padding-left: 60px;
+
+        &:last-child {
+          background-size: 44px 44px;
+        }
+
+        &:first-child {
+          background-size: 44px 44px;
+        }
+
+        &:nth-child(2) {
+          background-size: 44px 44px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1210px) {
+  .process {
+    &__text {
+      width: 100%;
+    }
+
+    &__title {
+      font-size: 28px;
+    }
+
+    &__description {
+      width: 100%;
+      text-align: justify;
+    }
+
+    &__steps {
+      & .process__step {
+        width: 150px;
+        padding: 0 20px;
+
+        &--number {
+          margin-top: 54px;
+        }
+
+        &--ellipse {
+          top: 15%;
+          left: 35%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .container {
+    width: 700px;
+  }
+
+  .header {
+    height: 704px;
+    background: $main-color;
+
+    &__background {
+      bottom: -545px;
+    }
+
+    &__title {
+      font-size: 45px;
+    }
+
+    &__intro {
+      font-size: 17px;
+      width: 75%;
+    }
+
+    &__btn {
+      width: 180px;
+      height: 50px;
+      font-size: 14px;
+    }
+
+    &__logo {
+      font-size: 28px;
+    }
+
+    &__main-menu {
+      & .main-menu {
+        &__item {
+          margin-right: 40px;
+
+          &:last-child {
+            margin-left: 20px;
+          }
+        }
+      }
+    }
+
+    &__photo {
+      height: 400px;
+
+      & .photo__slider {
+        top: 206px;
+        width: 145px;
+        height: 52px;
+        left: -73px;
+
+        &--left,
+        &--right {
+          height: 52px;
+          width: 73px;
+        }
+      }
+
+      &--text {
+        font-size: 15px;
+      }
+
+      & .photo__socials {
+        transform: none;
+        top: 410px;
+        left: 135px;
+      }
+    }
+  }
+
+  .welcome {
+    &__title {
+      margin-top: 80px;
+    }
+
+    &__text {
+      margin-top: 280px;
+    }
+  }
+
+  .services {
+    margin-top: 80px;
+
+    &__wrapper {
+      padding: 0 5px;
+      text-align: center;
+      width: 200px;
+
+      &--name {
+        margin-top: 40px;
+        font-size: 17px;
+      }
+
+      &--description {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .features {
+    background-size: 600px 850px;
+    padding: 70px 0;
+  }
+
+  .testimonials {
+    padding-top: 100px;
+
+    &__wrapper {
+      margin: 60px 0 0;
+    }
+
+    &__person {
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &--photo {
+        left: 80px;
+      }
+
+      &--background {
+        left: 32px;
+      }
+    }
+  }
+
+  .result {
+    padding: 70px 0;
+
+    &__title {
+      font-size: 40px;
+    }
+
+    &__text {
+      font-size: 20px;
+    }
+
+    &__btn {
+      width: 180px;
+      height: 45px;
+    }
+
+    &__bg {
+      &.very-small--first-left,
+      &.very-small--second-left,
+      &.very-small--first-right,
+      &.very-small--second-right,
+      &.big--first-right {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    &__form {
+      & .form__input:nth-child(3) {
+        margin-bottom: 60px;
+      }
+    }
+    &__info {
+      & .contacts__text {
+        font-size: 28px;
+        margin-bottom: 33px;
+      }
+
+      & .contacts--address,
+      & .contacts--phone {
+        & a {
+          font-size: 18px;
+          margin-bottom: 31px;
+        }
+      }
+    }
+  }
+
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 30px;
+
+    &__wrapper {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &--design {
+        margin-bottom: 30px;
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media (max-width: 990px) {
+  .section {
+    &__title {
+      width: 100%;
+    }
+
+    &__text {
+      margin: 0 auto;
+    }
+  }
+
+  .features {
+    background: $main-color;
+
+    &__title {
+      width: 100%;
+    }
+
+    &-list {
+      &__item {
+        width: 100%;
+        margin-bottom: 30px;
+
+        &--description {
+          padding: 24px 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .container {
+    width: 600px;
+  }
+
+  .header {
+    height: 595px;
+
+    &__background {
+      bottom: -485px;
+    }
+
+    &__title {
+      text-align: center;
+      margin: 50px 0 22px;
+    }
+
+    &__intro {
+      text-align: center;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    &__logo {
+      &--link {
+        font-size: 24px;
+        line-height: 24px;
+      }
+    }
+
+    &__btn {
+      width: 130px;
+      display: block;
+      margin: 42px auto 0;
+      font-size: 13px;
+      height: 40px;
+    }
+
+    &__main-menu {
+      & .main-menu {
+        &__item {
+          margin-right: 25px;
+        }
+      }
+    }
+
+    &__photo {
+      height: 350px;
+      margin-top: 42px;
+
+      &--text {
+        font-size: 13px;
+        bottom: 7%;
+        left: 5%;
+      }
+
+      & .socials {
+        display: none;
+      }
+
+      & .photo__slider {
+        top: 325px;
+        width: 120px;
+        height: 46px;
+        left: 235px;
+
+        &--left,
+        &--right {
+          height: 46px;
+          width: 60px;
+        }
+      }
+    }
+  }
+
+  .welcome {
+    &__text {
+      width: 600px;
+      margin: 250px auto 0;
+    }
+
+    &__title {
+      margin-top: 60px;
+    }
+  }
+
+  .services {
+    margin-top: 60px;
+  }
+
+  .section {
+    &__text {
+      font-size: 18px;
+      text-align: center;
+    }
+
+    &__title {
+      text-align: center;
+      background-position: 35%;
+      padding: 0;
+    }
+  }
+
+  .process {
+    &__title {
+      width: 100%;
+      margin: 0 auto 35px;
+      text-align: center;
+    }
+
+    &__steps {
+      & .process__step {
+        width: 120px;
+        padding: 0 15px;
+
+        &--description {
+          font-size: 11px;
+        }
+      }
+    }
+  }
+
+  .features {
+    &__title {
+      margin-bottom: 49px;
+    }
+
+    &__text {
+      & .section__title {
+        background-position: 35%;
+      }
+    }
+  }
+
+  .testimonials {
+    & .section__title {
+      background-position: 30%;
+    }
+
+    &__intro {
+      width: 100%;
+      text-align: center;
+    }
+
+    &__person {
+      height: 400px;
+
+      &--description {
+        margin-top: 180px;
+        font-size: 12px;
+      }
+
+      &--background {
+        width: 110.9px;
+        height: 50px;
+        top: 65px;
+      }
+
+      &--photo {
+        top: 75px;
+        left: 62px;
+
+        & img {
+          width: 70px;
+        }
+      }
+    }
+  }
+
+  .result {
+    &__title {
+      font-size: 35px;
+      margin-bottom: 40px;
+    }
+
+    &__text {
+      font-size: 17px;
+      width: 100%;
+    }
+
+    &__btn {
+      margin-top: 50px;
+    }
+
+    &__bg {
+      &.standard--second-right {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    &__wrapper {
+      display: block;
+    }
+
+    &__form {
+      margin-bottom: 40px;
+
+      & .section__title {
+        background-position: 25%;
+        margin-bottom: 60px;
+      }
+
+      & .form__input {
+        margin: 0 auto 30px;
+      }
+
+      & .form-btn {
+        margin: 0 auto;
+        width: 180px;
+        height: 45px;
+        display: block;
+      }
+    }
+
+    &__info {
+      text-align: center;
+    }
+
+    &__text {
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    &__socials {
+      margin: 0 auto;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .container {
+    width: 500px;
+  }
+
+  .header {
+    &__photo {
+      & .photo__slider {
+        left: 205px;
+      }
+    }
+
+    & nav {
+      flex-direction: column;
+    }
+
+    &__main-menu {
+      padding-left: 0;
+    }
+  }
+
+  .section {
+    &__text {
+      font-size: 16px;
+    }
+
+    &__title {
+      padding: 0;
+      background-position: 35%;
+    }
+  }
+
+  .welcome {
+    &__text {
+      margin-top: 220px;
+      width: 100%;
+    }
+
+    &__title {
+      font-size: 38px;
+      margin-top: 40px;
+    }
+  }
+
+  .services {
+    margin-top: 40px;
+
+    &__wrapper {
+      width: 150px;
+
+      &--name {
+        font-size: 15px;
+        margin-top: 20px;
+      }
+
+      &--description {
+        font-size: 13px;
+        margin-top: 20px;
+      }
+
+      &--photo {
+        width: 100px;
+        height: 100px;
+      }
+    }
+  }
+
+  .features {
+    &__title {
+      text-align: center;
+      margin-bottom: 29px;
+    }
+
+    &__text {
+      & .section__title {
+        background-position: 25%;
+      }
+    }
+
+    &-list {
+      &__item {
+        &--description {
+          padding: 15px 0;
+          font-size: 13px;
+        }
+      }
+    }
+  }
+
+  .testimonials {
+    &__wrapper {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__person {
+      width: 100%;
+      height: 100%;
+      padding-bottom: 10px;
+      margin-bottom: 40px;
+
+      &--background {
+        left: 40%;
+      }
+
+      &--photo {
+        left: 45%;
+      }
+    }
+  }
+
+  .contacts {
+    &__info {
+      & .section__title {
+        background-position: 30%;
+      }
+    }
+  }
+
+  .footer {
+    &__wrapper {
+      &--menu {
+        &-item {
+          margin-right: 23px;
+
+          & a {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .process {
+    padding-top: 60px;
+
+    &__steps {
+      display: block;
+
+      & .process__step {
+        width: 100%;
+        height: 50%;
+
+        &--description {
+          font-size: 14px;
+        }
+
+        &--ellipse {
+          top: 5%;
+          left: 44%;
+        }
+      }
+    }
+
+    & .container {
+      width: 100%;
+    }
+
+    &__title {
+      font-size: 25px;
+    }
+
+    &__description {
+      width: 100%;
+      font-size: 14px;
+    }
+  }
+
+  .welcome {
+    padding-bottom: 60px;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    width: 300px;
+  }
+
+  .header {
+    &__background {
+      bottom: -420px;
+    }
+
+    &__photo {
+      width: 190%;
+      margin-left: -115px;
+
+      &--text {
+        left: 10%;
+      }
+    }
+
+    &__logo {
+      &--link {
+        font-size: 20px;
+      }
+    }
+
+    &__title {
+      font-size: 28px;
+    }
+
+    &__intro {
+      font-size: 13px;
+    }
+  }
+
+  .services {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &__wrapper {
+      width: 250px;
+      margin-top: 40px;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &--photo {
+        width: 150px;
+        height: 150px;
+      }
+
+      &--name {
+        font-size: 17px;
+      }
+
+      &--description {
+        font-size: 15px;
+      }
+    }
+  }
+
+  .section {
+    &__title {
+      background-position: 25%;
+    }
+
+    &__text {
+      text-align: justify;
+    }
+  }
+
+  .welcome {
+    &__title {
+      font-size: 35px;
+      margin-top: 60px;
+    }
+  }
+
+  .process {
+    &__title {
+      font-size: 20px;
+    }
+  }
+
+  .testimonials {
+    & .section__title {
+      background-position: 15%;
+    }
+
+    &__person {
+      &--background {
+        left: 32%;
+      }
+
+      &--photo {
+        left: 42%;
+      }
+    }
+  }
+
+  .result {
+    &__bg {
+      &.big--left {
+        left: 30px;
+      }
+
+      &.standard--second-left {
+        top: 5px;
+      }
+
+      &.big--second-right,
+      &.standard--first-right {
+        left: 350px;
+      }
+
+      &.standard--first-left {
+        display: none;
+      }
+    }
+  }
+
+  .contacts {
+    & .section__title {
+      background-position: 5%;
+    }
+
+    &__info {
+      & .contacts__text {
+        font-size: 24px;
+        width: 100%;
+      }
+    }
+  }
+
+  .footer {
+    &__wrapper {
+      &--menu {
+        padding-left: 0;
+
+        &-item {
+          margin-right: 7px;
+
+          & a {
+            font-size: 12px;
+          }
+        }
+      }
+
+      &--design {
+        font-size: 15px;
+        width: 100%;
+      }
+    }
+  }
+}
