--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,9 +1,13 @@
-@import "variables";
+@import 'variables';
 
 .header {
-  background: linear-gradient(120deg,
-  rgba(86, 204, 242, 1) 0%, rgba(86, 204, 242, 1) 78%,
-  rgba(252, 252, 253, 1) 68%, rgba(252, 252, 253, 1) 100%);
+  background: linear-gradient(
+    120deg,
+    rgba(86, 204, 242, 1) 0%,
+    rgba(86, 204, 242, 1) 78%,
+    rgba(252, 252, 253, 1) 68%,
+    rgba(252, 252, 253, 1) 100%
+  );
   height: 848px;
   box-sizing: border-box;
   padding: 48px 0;
@@ -57,16 +61,18 @@
       line-height: 30px;
 
       &::after {
-        content: "";
+        content: '';
         display: block;
         height: 4px;
         width: 100%;
         margin-top: 5px;
         opacity: 0;
 
-        background: linear-gradient(180deg,
-        rgba(255, 255, 255, 0.25) 0%,
-        rgba(255, 255, 255, 0) 100%),
+        background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0.25) 0%,
+            rgba(255, 255, 255, 0) 100%
+          ),
           #fcc304;
         border-radius: 32px;
         transition: opacity, 0.6s;
@@ -111,7 +117,7 @@
   }
 
   &__photo {
-    background: url("../images/intro.jpg") no-repeat 50%;
+    background: url('../images/intro.jpg') no-repeat 50%;
     background-size: cover;
     height: 640px;
     width: 100%;
@@ -175,8 +181,11 @@
         display: flex;
         width: 162px;
         height: 64px;
-        background: linear-gradient(180deg,
-        rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 100%),
+        background: linear-gradient(
+            180deg,
+            rgba(255, 255, 255, 0.25) 0%,
+            rgba(255, 255, 255, 0) 100%
+          ),
           #fcc304;
         border-radius: 50px;
 
@@ -195,7 +204,8 @@
           transition: background, 0.4s;
 
           &:hover {
-            background: linear-gradient(180deg, #fec75d 0%, #fbb80b 90.48%), #fdcc29;
+            background: linear-gradient(180deg, #fec75d 0%, #fbb80b 90.48%),
+              #fdcc29;
             cursor: pointer;
           }
         }
