--- a/styles/_myReset&Common.scss
+++ b/styles/_myReset&Common.scss
@@ -1,11 +1,11 @@
-@import "variables";
+@import 'variables';
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Muli", sans-serif;
+  font-family: 'Muli', sans-serif;
   font-weight: 400;
   margin: 0;
   color: #334563;
@@ -76,7 +76,7 @@ span {
     font-size: 16px;
     letter-spacing: 2px;
     text-transform: uppercase;
-    background: url("../images/part_of_title.png") no-repeat;
+    background: url('../images/part_of_title.png') no-repeat;
     background-size: contain;
     padding-left: 37px;
     margin-bottom: 19px;
