--- a/styles/main.scss
+++ b/styles/main.scss
@@ -710,7 +710,7 @@
   .header {
     &__photo {
       & .photo__slider {
-        left: 205px;
+        left: 175px;
       }
     }
 
@@ -901,8 +901,8 @@
     }
 
     &__photo {
-      width: 190%;
-      margin-left: -115px;
+      width: 161%;
+      margin-left: -92px;
 
       &--text {
         left: 10%;
@@ -944,7 +944,7 @@
           }
 
           & a {
-            font-size: 12px;
+            font-size: 14px;
           }
         }
       }
@@ -1007,6 +1007,8 @@
   }
 
   .testimonials {
+    padding-top: 60px;
+
     & .section__title {
       background-position: 15%;
     }
@@ -1044,11 +1046,23 @@
   }
 
   .contacts {
+    padding-top: 60px;
+
     & .section__title {
       background-position: 5%;
     }
 
+    &__form {
+      & .form__input {
+        &:nth-child(3) {
+          margin-bottom: 40px;
+        }
+      }
+    }
+
     &__info {
+      margin-top: 60px;
+
       & .contacts__text {
         font-size: 24px;
         width: 100%;
@@ -1059,7 +1073,10 @@
   .footer {
     &__wrapper {
       &--menu {
+        width: 100%;
         padding-left: 0;
+        display: flex;
+        justify-content: center;
 
         &-item {
           margin-right: 7px;
