--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow: hi;
 }
 
 body {
@@ -579,11 +580,12 @@ span {
   font-size: 16px;
   line-height: 150%;
   color: #253757;
-  width: 40%;
+  width: 20%;
 }
 .footer__wrapper--menu {
   display: flex;
   list-style: none;
+  width: 70%;
 }
 .footer__wrapper--menu-item {
   margin-right: 63px;
@@ -1341,6 +1343,9 @@ span {
   .header nav {
     flex-direction: column;
   }
+  .header__main-menu {
+    padding-left: 0;
+  }
 
   .section__text {
     font-size: 16px;
@@ -1471,7 +1476,7 @@ span {
     font-size: 20px;
   }
   .header__title {
-    font-size: 28px;
+    font-size: 32px;
   }
   .header__intro {
     font-size: 13px;
@@ -2080,7 +2085,7 @@ span {
   }
 
   .header__photo .photo__slider {
-    left: 205px;
+    left: 175px;
   }
   .header nav {
     flex-direction: column;
@@ -2214,8 +2219,8 @@ span {
     bottom: -420px;
   }
   .header__photo {
-    width: 190%;
-    margin-left: -115px;
+    width: 161%;
+    margin-left: -92px;
   }
   .header__photo--text {
     left: 10%;
@@ -2249,7 +2254,7 @@ span {
     margin-left: 0;
   }
   .header__main-menu .main-menu__item a {
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .services {
@@ -2294,6 +2299,9 @@ span {
     font-size: 20px;
   }
 
+  .testimonials {
+    padding-top: 60px;
+  }
   .testimonials .section__title {
     background-position: 15%;
   }
@@ -2317,8 +2325,17 @@ span {
     display: none;
   }
 
+  .contacts {
+    padding-top: 60px;
+  }
   .contacts .section__title {
     background-position: 5%;
+  }
+  .contacts__form .form__input:nth-child(3) {
+    margin-bottom: 40px;
+  }
+  .contacts__info {
+    margin-top: 60px;
   }
   .contacts__info .contacts__text {
     font-size: 24px;
@@ -2326,7 +2343,10 @@ span {
   }
 
   .footer__wrapper--menu {
+    width: 100%;
     padding-left: 0;
+    display: flex;
+    justify-content: center;
   }
   .footer__wrapper--menu-item {
     margin-right: 7px;
